--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,30 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+@layer base
+{
+   body
+   {
+    @apply bg-app-purple-1;
+   }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@layer components
+{
+  /* Draw grid lines for day and week view */
+  .mode-day-grid 
+   {
+    background-image:
+      repeating-linear-gradient(to right,#E3CDE3 0 1px, transparent 1px 100%);
+    background-size: calc(100%/24);
+   }
 
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+   .mode-week-grid
+   {
+    background-image:
+      repeating-linear-gradient(to right,#E3CDE3 0 1px, transparent 1px 100%);
+    background-size: calc(100%/7);
+   }
 }
